--- a/.env.stage
+++ b/.env.stage
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 VUE_APP_DEBUG=false
 VUE_APP_BASE_URL=https://ui-stage.data-arc.org
 VUE_APP_API_URL=https://api-stage.data-arc.org
