yarn.lock is required to maintain the locked versions - not package-lock for yarn builds. This runs into unexpected issues when the container builds later versions without dev testing

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,7 +1,8 @@
 # prep
 FROM node:lts-alpine as prep
 WORKDIR /app
-COPY package*.json ./
+COPY package.json ./
+COPY yarn.lock ./
 RUN yarn install
 COPY . .
 RUN yarn build
