--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -1,7 +1,8 @@
 # prep
 FROM node:lts-alpine as prep
 WORKDIR /app
-COPY package*.json ./
+COPY package.json ./
+COPY yarn.lock ./
 RUN yarn install
 COPY . .
 RUN yarn build
