Use env.stage during stage builds

--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -4,7 +4,9 @@ WORKDIR /app
 COPY package.json ./
 COPY yarn.lock ./
 RUN yarn install
+COPY .env.stage .env
 COPY . .
+RUN rm .env.production
 RUN yarn build
 
 # production
