--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "lint": "stylelint '**/*.vue' '**/*.scss' --fix scss"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@vue/apollo-composable": "^4.0.0-alpha.10",
-    "@vue/eslint-config-airbnb": "^4.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@vue/apollo-composable": "^4.0.0-alpha.12",
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "axios": "^0.21.1",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
     "compass-mixins": "^0.12.10",
-    "core-js": "^3.1.2",
+    "core-js": "^3.8.2",
     "cytoscape-cola": "^2.4.0",
     "cytoscape-fcose": "^1.2.3",
-    "d3": "^6.2.0",
-    "graphql": "^15.3.0",
+    "d3": "^6.3.1",
+    "graphql": "^15.4.0",
     "js-cookie": "^2.2.1",
-    "node-sass": "^4.13.0",
-    "plotly.js-mapbox-dist": "^1.57.1",
+    "node-sass": "^5.0.0",
+    "plotly.js-mapbox-dist": "^1.58.4",
     "pug": "^3.0.0",
-    "vue": "^2.6.10",
-    "vue-apollo": "^3.0.3",
+    "vue": "^2.6.12",
+    "vue-apollo": "^3.0.5",
     "vue-async-computed": "^3.8.2",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-chartjs": "^3.5.1",
@@ -46,27 +46,27 @@
     "vue-jwt-decode": "^0.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-papa-parse": "^2.0.0",
-    "vue-router": "^3.0.6",
-    "vue-select": "^3.10.8",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.4.9",
+    "vue-select": "^3.11.2",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-unit-jest": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "^4.5.10",
+    "@vue/cli-plugin-unit-jest": "^4.5.10",
+    "@vue/cli-service": "^4.5.10",
+    "@vue/test-utils": "1.1.2",
     "babel-eslint": "^10.0.3",
-    "babel-preset-airbnb": "^4.1.0",
+    "babel-preset-airbnb": "^5.0.0",
     "comlink-loader": "^2.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-vue": "^5.2.3",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0",
-    "stylelint-config-standard": "^19.0.0",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.4.1",
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^10.1.1",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-processor-html": "^1.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   },
   "postcss": {
     "plugins": {
