--- a/.env.stage
+++ b/.env.stage
@@ -1,5 +1,5 @@
 NODE_ENV=development
 VUE_APP_DEBUG=false
 VUE_APP_BASE_URL=https://ui-stage.data-arc.org
-VUE_APP_API_URL=https://api-stage.data-arc.org
-VUE_APP_GRAPHQL_URL=https://api-stage.data-arc.org/graphql
+VUE_APP_API_URL=https://api.data-arc.org
+VUE_APP_GRAPHQL_URL=https://api.data-arc.org/graphql
